--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,9 +17,9 @@ jobs:
     - name: docker login
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}} 
-        DOCKER_PASSWORD: ${{secrets.DCOKER_PASSWORD}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |
-        docker login -p $DOCKER_USER -p $DOCKER_PASSWORD  
+        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD  
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag benjamino-afk/poker:$(date +%s)
       
