--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
     - name: Check out code
+      uses: actions/checkout@v3
     - uses: actions/checkout@v3
     - name: docker login
       env:
