--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,29 +1,30 @@
 name: Docker Image CI
-
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - 'main'
   pull_request:
-    branches: [ "master" ]
-
+    branches: 
+      - "main"
 jobs:
-
-  build:
-
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Check out code
-      uses: actions/checkout@v3
-    - uses: actions/checkout@v3
-    - name: docker login
-      env:
-        DOCKER_USER: ${{secrets.DOCKER_USER}} 
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD  
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag benjamino89/benstorage:$(date +%s)
-      
-    - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER}}/benstorage
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: benjamino89/poker:latest
